# prog3_simulacro_pc1_v2023_1

./: CMakeLists.txt  README.md  run.sh
autograder/: CMakeLists.txt  config.yml
autograder/tests/: redirect_io.h
autograder/tests/catch_test_1/: run_test  test.yml  test_1.cpp
autograder/tests/catch_test_2/: run_test  test.yml  test_2.cpp
autograder/tests/cppcheck/: cppcheck.cpp  run_test  test.yml
src/: P1.cpp  P1.h  P2.cpp  P2.h  generate_zip.sh
